Add icons and split column styles.

--- a/code/index.html
+++ b/code/index.html
@@ -29,20 +29,21 @@
 
     <div class="row statuses">
       <div class="col-lg-12">
-        <div class="row created">
-          <div class="col-lg-12">
+        <div class="row">
+          <div class="col-lg-6 created">
+            <img class="icon" src="img/beaker.png" />
             <h1>Labs</h1>
             <div class="status">Waiting for tech</div>
           </div>
-        </div>
-        <div class="row inProgress">
-          <div class="col-lg-12">
+          <div class="col-lg-6 inProgress">
+            <img class="icon" src="img/camera.png" />
             <h1>Imaging</h1>
             <div class="status">Waiting for review</div>
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-12">
+          <div class="col-lg-6">
+            <img class="icon" src="img/pill.png" />
             <h1>Treatment</h1>
             <ul class="status">
               <li >Fluids</li>
@@ -50,9 +51,8 @@
               <li>Antibiotics</li>
             </ul>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-12">
+          <div class="col-lg-6">
+            <img class="icon" src="img/stethoscope.png" />
             <h1>Consultation</h1>
             <ul class="status">
               <li>General Surgery <span class="created">Consult Requested</span></li>
@@ -62,6 +62,8 @@
         </div>
       </div>
     </div>
+
+    <img src="img/logo.png" class="watermark" />
 
   </div>
 </body>
