--- a/app/tellme/tellme.html
+++ b/app/tellme/tellme.html
@@ -99,8 +99,8 @@
       <div class="col-lg-12">
         {{#if patient}}
           <h1>Welcome {{ patient.name }} to the Turkey Sandwich Emergency Department</h1>
-          <h2>Your Clinical Team is: <small>Jane Doe, MD</small></h2>
-          <img class="pull-right" src="http://placehold.it/100x100" />
+          <h2>Your Clinical Team is: Dr. Jane Doe, MD</h2>
+          <h2><small>Average total visit time today is 2 hours.</small></h2>
         {{else}}
           <h1>Awaiting next patient</h1>
         {{/if}}
