--- a/app/tellme/tellme.html
+++ b/app/tellme/tellme.html
@@ -10,44 +10,39 @@
 </body>
 
 <template name="Layout">
-  <nav class="navbar navbar-default" role="navigation">
-    <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">Room 5</a>
-      </div>
-    </div>
-  </nav>
   {{> yield}}
 </template>
 
 <template name="item">
-  <li class="event {{ status }}">
+  <div class="col-lg-12 task {{ status }}">
     {{#if image}}
       <img class="icon" src="{{ image }}" />
     {{/if}}
     <h1>{{ type }}</h1>
-    <ul class="status">
-    {{ text }}
-<!--       {{#each}}
-        <li>{{ hi }}</li>
-      {{/each}} -->
-    </ul>
-  </li>
+    {{#if time}}
+      <h3 class="text-muted">Average current turn around time is {{ time }}</h3>
+    {{/if}}
+    {{#if list}}
+      {{#each list}}
+      <ul class="status">
+        <li>
+          {{ label }}
+          {{#if status}}
+            <span class="{{ status }}">{{ statusText }}</span>
+          {{/if}}
+        </li>
+      </ul>
+      {{/each}}
+    {{else}}
+      <div class="status">{{ text }}</div>
+    {{/if}}
+  </div>
 </template>
 
 <template name="items">
-  <ul class="list-unstyled">
-    {{#each items}}
-      {{> item }}
-    {{/each}}
-  </ul>
+  {{#each items}}
+    {{> item }}
+  {{/each}}
 </template>
 
 <template name="control">
@@ -89,20 +84,27 @@
 </template>
 
 <template name="Home">
-  Homey
+  Home Page
 </template>
 
 <template name="patient">
   <div class="container-fluid">
 
     <div class="row">
-      <div class="col-lg-12">
+      <div class="col-sm-12 col-lg-12 patientInfo">
+        <div class="pull-left">
+          <h1>Room 5</h1>
+          {{#if patient}}
+            <h2 class="text-muted">{{ patient.name }}</h2>
+            <div>
+              <h3>Your Clinical Team is:</h3><span>Mark Greene, MD | Pat Smith, RN</span>
+            </div>
+          {{else}}
+            <h2 class="text-muted">Awaiting next patient</h2>
+          {{/if}}
+        </div>
         {{#if patient}}
-          <h1>Welcome {{ patient.name }} to the Turkey Sandwich Emergency Department</h1>
-          <h2>Your Clinical Team is: <small>Jane Doe, MD</small></h2>
-          <img class="pull-right" src="http://placehold.it/100x100" />
-        {{else}}
-          <h1>Awaiting next patient</h1>
+          <img class="pull-right" src="img/clint-eastwood.jpg" />
         {{/if}}
       </div>
     </div>
@@ -110,38 +112,8 @@
     <div class="row statuses">
       <div class="col-lg-12">
         <div class="row">
-        {{> items}}
-
-<!--           <div class="col-lg-6 created">
-            <img class="icon" src="img/beaker.png" />
-            <h1>Labs</h1>
-            <div class="status">Waiting for tech</div>
-          </div>
-          <div class="col-lg-6 inProgress">
-            <img class="icon" src="img/camera.png" />
-            <h1>Imaging</h1>
-            <div class="status">Waiting for review</div>
-          </div> -->
+          {{> items}}
         </div>
-        <!-- <div class="row">
-          <div class="col-lg-6">
-            <img class="icon" src="img/pill.png" />
-            <h1>Treatment</h1>
-            <ul class="status">
-              <li >Fluids</li>
-              <li>Pain Pills</li>
-              <li>Antibiotics</li>
-            </ul>
-          </div>
-          <div class="col-lg-6">
-            <img class="icon" src="img/stethoscope.png" />
-            <h1>Consultation</h1>
-            <ul class="status">
-              <li>General Surgery <span class="created">Consult Requested</span></li>
-              <li>Nephrologist <span class="resolved">Consult Resolved</span></li>
-            </ul>
-          </div>
-        </div> -->
       </div>
     </div>
 
