--- a/app/tellme/tellme.html
+++ b/app/tellme/tellme.html
@@ -104,11 +104,7 @@
           {{/if}}
         </div>
         {{#if patient}}
-          <h1>Welcome {{ patient.name }} to the Turkey Sandwich Emergency Department</h1>
-          <h2>Your Clinical Team is: Dr. Jane Doe, MD</h2>
-          <h2><small>Average total visit time today is 2 hours.</small></h2>
-        {{else}}
-          <h1>Awaiting next patient</h1>
+          <img class="pull-right" src="img/clint-eastwood.jpg" />
         {{/if}}
       </div>
     </div>
