--- a/app/tellme/tellme.html
+++ b/app/tellme/tellme.html
@@ -104,7 +104,7 @@
           {{/if}}
         </div>
         {{#if patient}}
-          <img class="pull-right" src="img/clint-eastwood.jpg" />
+          <img class="pull-right" src="img/clint-eastwood.png" />
         {{/if}}
       </div>
     </div>
